<resources>
    <string name="app_name">FluxBiz</string>
    <string name="se_connecter">Se connecter</string>
    <string name="switch_register">Pas encore de compte ? S\'inscrire</string>
    <string name="email">Email</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="switch_login">Déjà inscrit ? Se connecter</string>
    <string name="s_inscrire">S\'inscrire</string>
    <string name="username">Username</string>
    <string name="logo">Logo</string>
    <string name="register_title">S\'inscrire sur FluxBiz</string>
    <string name="Login_title">Se connecter à FluxBiz</string>
    <string name="home_button">Home button</string>
    <string name="cancel">Annuler</string>
    <string name="user_logo">User logo</string>
    <string name="biz">Biz</string>
    <string name="biz_hint">Qu\'est ce qui se passe ?</string>
    <string name="comment">Commenter</string>
    <string name="share">Partager</string>
    <string name="content">Description</string>
    <string name="profile_picture">Photo de profil</string>
    <string name="like">Like</string>
    <string name="nav_help_text">Aide et Support</string>
    <string name="nav_settings_text">Paramètres</string>
    <string name="nav_profile_text">Profil</string>
    <string name="ConnectNormally">Se connecter normalement</string>
    <string name="ButtonSendMail">Envoyer le mail</string>
    <string name="reset_password">Réinitialiser votre mot de passe</string>
    <string name="params">Paramètres</string>
    <string name="account">Mon Compte</string>
    <string name="security">Sécurité</string>
    <string name="next">Suivant</string>
    <string name="confirm">Confirmer</string>
    <string name="change_mail">Changer votre adresse mail</string>
    <string name="change_username">Changer de nom d\'utilisateur</string>
    <string name="verif">Vérifiez votre identité</string>
    <string name="change_password">Changer mon mot de passe</string>
    <string name="accessibility">Accessibilité</string>
    <string name="active_sessions">Connexions actives</string>
    <string name="comment_hint">Postez votre réponse</string>
    <string name="answer_text">En réponse à @user</string>
    <string name="emptyReplyList">C\'est vide ici ...</string>
    <string name="device">Cette appareil</string>
    <string name="currentActive">Actuellement actif</string>
    <string name="disconnect">Déconnexion</string>
</resources>