<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <EditText
        android:id="@+id/editTextBizContent"
        android:layout_width="288dp"
        android:layout_height="43dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="64dp"
        android:hint="@string/biz_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonSendBiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        android:text="@string/biz"
        app:layout_constraintBottom_toTopOf="@+id/editTextBizContent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textViewCancel"
        android:layout_width="67dp"
        android:layout_height="34dp"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="@color/my_light_primary"
        app:layout_constraintBottom_toTopOf="@+id/imageView4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/user_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/user_default" />

</androidx.constraintlayout.widget.ConstraintLayout>
