<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/deviceItem"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/block_border"
    android:padding="6dp">

    <TextView
        android:id="@+id/DeviceId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="top|start"
        android:layout_marginStart="4dp"
        android:text="@string/device"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/DeviceLogo"
        app:layout_constraintTop_toTopOf="@id/DeviceLogo"
        app:layout_constraintBottom_toTopOf="@id/DeviceLastConnexion"/>

    <ImageButton
        android:id="@+id/DeviceLogo"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:contentDescription="@string/profile_picture"
        android:padding="16dp"
        android:scaleType="centerCrop"
        android:background="?attr/selectableItemBackgroundBorderless"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_smartphone" />

    <TextView
        android:id="@+id/DeviceLastConnexion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:scrollHorizontally="false"
        android:singleLine="false"
        android:text="@string/currentActive"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="15sp"
        android:layout_marginStart="4dp"
        app:layout_constraintTop_toBottomOf="@id/DeviceId"
        app:layout_constraintStart_toEndOf="@+id/DeviceLogo"
        app:layout_constraintBottom_toBottomOf="@id/DeviceLogo"
        tools:layout_editor_absoluteY="49dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
