<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:id="@+id/TopBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/block_border"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/buttonCancel"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:layout_marginStart="16dp"
            android:gravity="center"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_close" />

        <Button
            android:id="@+id/buttonSendComment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:layout_alignParentEnd="true"
            android:text="Répondre" />

    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/TopBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:fillViewport="true"
        android:overScrollMode="never">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="6dp">

            <View
                android:layout_width="3dp"
                android:layout_height="0dp"
                android:background="?attr/colorOutline"
                app:layout_constraintStart_toStartOf="@id/OwnerProfilePicture"
                app:layout_constraintTop_toTopOf="@id/OwnerProfilePicture"
                app:layout_constraintEnd_toEndOf="@id/AnswerProfilePicture"
                app:layout_constraintBottom_toBottomOf="@id/AnswerProfilePicture"/>

            <TextView
                android:id="@+id/BizUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="top|start"
                android:text="@string/username"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_marginStart="12dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@+id/OwnerProfilePicture"
                app:layout_constraintVertical_bias="0.8" />

            <ImageView
                android:id="@+id/OwnerProfilePicture"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="14dp"
                android:contentDescription="@string/profile_picture"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/user_default" />

            <TextView
                android:id="@+id/BizContent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:scrollHorizontally="false"
                android:singleLine="false"
                android:text="@string/content"
                android:layout_marginStart="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/OwnerProfilePicture"
                app:layout_constraintTop_toBottomOf="@+id/BizUsername"
                app:layout_constraintVertical_bias="0.333" />

            <ImageView
                android:id="@+id/AnswerProfilePicture"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="46dp"
                android:contentDescription="@string/user_logo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/BizContent"
                app:srcCompat="@drawable/user_default" />

            <TextView
                android:id="@+id/answeringTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="26dp"
                android:layout_marginStart="12dp"
                android:text="@string/answer_text"
                app:layout_constraintStart_toEndOf="@id/AnswerProfilePicture"
                app:layout_constraintTop_toBottomOf="@id/BizContent"/>

            <EditText
                android:id="@+id/CommentContent"
                android:layout_width="322dp"
                android:layout_height="120dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="8dp"
                android:gravity="top|start"
                android:hint="@string/comment_hint"
                android:inputType="textMultiLine|textCapSentences"
                android:lines="4"
                android:scrollHorizontally="false"
                android:singleLine="false"
                android:background="@android:color/transparent"
                android:maxLength="300"
                android:textCursorDrawable="@drawable/custom_cursor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/AnswerProfilePicture"
                app:layout_constraintTop_toBottomOf="@id/answeringTextView" />

            <View
                android:id="@+id/spacerView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/CommentContent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
